# EventSense

./: .gitignore  DEPLOYMENT.md  EventSense_Spec.md  IMPLEMENTATION_LOG.md  LEARNING.md  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  .env.production.example  Dockerfile  Procfile  alembic.ini  pyproject.toml  railway.json
backend/alembic/: env.py
backend/alembic/versions/: 21601dff6066_add_prediction_outcomes_table.py  22387af2be6f_add_prediction_kind.py  33dfb9feb98c_add_price_snapshots_table.py  79df7bf433be_add_events_llm_summary.py  88b80a46ba34_initial_events_table.py  a50331f904f4_add_indicators_table.py  bb5f83a02cf9_add_predictions_table.py  c37f9609d269_add_event_documents_table.py  e1a7c4d90b12_add_predictions_direction_7d.py
backend/app/: logging_config.py  main.py
backend/app/adapters/: dot_plot.py  earnings.py  fed_speeches.py  fomc.py  fred.py  indicators_fred.py  indicators_market.py  prices.py  sec_edgar.py
backend/app/api/routes/: __init__.py  accuracy.py  events.py  (+5 more)
backend/app/config/: cik_map.py  settings.py
backend/app/db/: base.py  models.py  session.py
backend/app/lib/: market_hours.py
backend/app/llm/: clients.py  cost.py  router.py  schemas.py
backend/app/observability/: __init__.py  metrics.py
backend/app/prompts/: event_analysis_v1.txt  event_analysis_v2.txt  event_analysis_v3.txt
backend/app/schemas/: event.py  indicator.py  outcome.py  pnl.py  prediction.py  raw_event.py
backend/app/scripts/: backfill_prices.py  cleanup_backfill.py  dedupe_predictions.py  purge_fed_speeches.py  purge_legacy.py  recompute_alignment.py  reset_fred.py
backend/app/services/: alignment.py  analyzer.py  context_builder.py  document_fetcher.py  event_writer.py  indicator_writer.py  pnl.py  price_cache.py  price_writer.py  validator.py
backend/app/tasks/: analyzers.py  documents.py  fetchers.py  indicators.py  prices.py  validators.py
backend/app/workers/: celery_app.py
backend/tests/: conftest.py
backend/tests/integration/: test_analyzer.py  test_analyzer_v2.py  test_api_endpoints.py  test_context_builder.py  test_documents_pipeline.py  test_event_writer.py  test_events_context_endpoint.py  test_fred_idempotency.py  test_indicator_writer.py  test_price_writer.py  test_validator.py
backend/tests/unit/: test_alignment.py  test_alignment_kind_aware.py  test_document_fetcher.py  test_dot_plot_adapter.py  test_earnings_adapter.py  test_fed_speeches_adapter.py  test_fomc_adapter.py  test_fred_adapter.py  test_indicators_fred_adapter.py  test_indicators_market_adapter.py  test_llm_cost.py  test_llm_router.py  test_llm_schemas.py  test_market_hours.py  test_metrics_endpoint.py  test_pnl.py  test_prices_adapter.py  test_sec_edgar_adapter.py
(+50 files in other folders)
