[project]
name = "eventsense"
version = "0.1.0"
description = "Market event analysis platform with LLM predictions"
requires-python = ">=3.12,<3.13"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    # Config & validation
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    # HTTP & retries
    "httpx>=0.28.0",
    "tenacity>=9.0.0",
    # Logging
    "structlog>=24.4.0",
    # Task queue (Milestone 2+)
    "celery[redis]>=5.4.0",
    # Safe XML parsing for FOMC RSS feed (Milestone 3+) — guards against
    # XXE / billion-laughs attacks that stdlib xml.etree is vulnerable to.
    "defusedxml>=0.7.1",
    # Stock prices + earnings (Milestone 4+). Unofficial Yahoo Finance scraper —
    # API can change anytime, so wrap every call in broad except blocks.
    "yfinance>=0.2.50",
    # LLM analysis (Milestone 5+). instructor patches the SDKs to return
    # Pydantic models directly with auto-retry on malformed JSON.
    "openai>=1.55.0",
    "anthropic>=0.40.0",
    "instructor>=1.7.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-httpx>=0.35.0",
    "pre-commit>=4.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "ASYNC",# flake8-async
    "S",    # flake8-bandit (security)
    "RUF",  # ruff-specific
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "S101",  # assert used (fine in tests)
]

[tool.ruff.lint.per-file-ignores]
# S314: stdlib xml parsing is fine in tests where inputs are hardcoded fixtures.
"tests/**/*.py" = ["S101", "S105", "S106", "S314"]
"alembic/versions/*.py" = ["E501"]            # auto-generated migrations

[tool.ruff.lint.flake8-bugbear]
# FastAPI idioms: Depends/Query/Header/Body are intended as defaults.
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Header",
    "fastapi.Body",
    "fastapi.Path",
]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["alembic/versions/"]

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_decorators = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short"
